updated conclusion study 1

--- a/paper/1_Initial/manuscript.qmd
+++ b/paper/1_Initial/manuscript.qmd
@@ -375,16 +375,18 @@ Across individual datasets, the EGA model provided the best fit to the data in 8
 ## Discussion
 
 <!-- Aim and previous factor structures -->
-Study 1 aimed to systematically evaluate the structure of the IAS. Previous research reported conflicting models, from unidimensional [@brand2023] to bifactor [@campos2021; @lin2023] or two-factor solutions [@murphy2019; @koike2023]. Concerns about specific items (e.g., low discrimination, local dependencies, and items reflecting phenomena less accessible to interoception) prompted a mega-analytic approach using both factor-analytic and network-based methods.
+Study 1 aimed to systematically evaluate the structure of the IAS using a mega-analytic approach with both factor-analytic and network-based methods. Previous research across different datasets has highlighted inconsistency in optimal factor structure [e.g., unidimensional, bifactor, and two factor solutions have all been reported @brand2023; @campos2021; @lin2023; @murphy2019; @koike2023] and raised concerns about specific items (e.g., low discrimination, local dependencies, and items reflecting phenomena less accessible to interoception). To address these concerns and inconsistencies we combined 17 datasets with over 33 thousand participants using the IAS, providing the most comprehensive and robust analysis of the IAS structure to date. We conducted analyses across both combined and individual datasets allowing an examination of overall and dataset specific results and how they compared across three different structural analyses methods (EFA, HCA, EGA). 
 
 <!-- Item pairs and optimal structure -->
-Analyses revealed that seven item pairs (e.g., Hunger–Thirst, Urinate–Defecate, Cough–Sneeze) provided a robust and replicable structure, leading to a refined 14-item IAS. These pairs consistently emerged across datasets and yielded superior fit indices compared to alternative models. This suggests that the IAS does not measure a broad latent construct of interoceptive accuracy but reflects clusters of tightly coupled items tied to specific bodily sensations.
+Analyses revealed that seven item pairs (Hungry-Thirsty, Bruise-Blood sugar, Urinate-Defecate, Muscles-Pain, Breathing-Heart, Cough-Sneeze, Wind-Burp) provided a robust and replicable structure, leading to a refined 14-item IAS. These seven pairs emerged consistently across datasets and had superior fit indices compared to alternative models for most samples. Results suggest that rather than measuring the broad latent construct of “interoceptive accuracy” the IAS reflects clusters of tightly coupled items tied to specific bodily sensations, , including both “directly” felt sensations and inferred or anticipatory physical processes in the case of the Bruise-Blood Sugar pairing.
 
 <!-- Implications for scale interpretation -->
-The presence of redundant or unstable items (e.g., Tickle, Taste, Affective Touch) undermines interpretability and likely explains inconsistencies in prior factor-analytic findings [@campos2021; @lin2023]. Nevertheless, the structured item pairs correspond to intuitive bodily domains - visceral, expulsion, musculoskeletal - supporting ecological validity. These findings highlight the need for targeted scale refinement and motivate future development of context-sensitive, multidimensional interoception measures.
+Alternative mechanisms may also contribute to the emergence of these item pairings. Clustering may reflect shared temporal or functional characteristics of bodily events. For example, the Cough-Sneeze and Wind-Burp pairings may involve rapid reflexive responses and frequent experiential co-occurrence, whereas the Hungry-Thirsty and the Urinate-Defecate pairings may be shaped by basic homeostatic regulation and recurrent need states.  Such shared characteristics may elicit similar response strategies even when the underlying physiological processes are distinct. Importantly, these alternative explanations do not exclude the interpretation of the pairings as reflecting intuitive bodily domains (e.g., visceral, expulsion, musculoskeletal). Temporal and functional similarities are themselves grounded in bodily organisation and lived bodily experiences, suggesting multiple and overlapping sources of structure may shape responses to the IAS items. This convergence may contribute to the intuitive coherence of the item pairs while also increasing redundancy and instability when weakly discriminating items are retained, thereby complicating factor-analytic solutions and likely contributing to inconsistencies observed in prior findings [@campos2021; @lin2023]. 
+
+These findings highlight the need for targeted scale refinement and motivate future development of context-sensitive, multidimensional interoception measures. For example, many bodily sensations are inherently ambiguous without contextual information (e.g., a racing heart may signal physical exertion, anxiety, or excitement) and without specific context (e.g., physiological vs. affective triggers), it is unclear which state participants reference when responding. Such ambiguity likely constrains ecological validity and contributes to variability across studies, therefore adopting context-specific phrasing may therefore be necessary to more accurately capture interoceptive beliefs and reduce measurement noise [e.g., @vlemincx2023novel; @makowski2025mint].  
 
 <!-- Summary -->
-In summary, study 1 suggests that once problematic items are removed, the IAS is best conceptualized as a set of item clusters rather than a unidimensional scale. This structural insight provides the foundation for Study 2, where dispositional correlates are examined to further evaluate the IAS's construct validity.
+Overall, Study 1 suggests that, after removal of problematic items the IAS is best conceptualized as a set of item clusters rather than a unidimensional scale. This structural insight provides the foundation for Study 2, where dispositional correlates are examined to further evaluate the IAS’s construct validity.
 
 # Study 2
 
